--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                     </span>
                 </div>
                 <div class="col-xs-8 col-sm-9 col-md-9">
-                     By clicking <strong class="label label-primary">Register</strong>, you agree to the <a href="#" data-toggle="modal" data-target="#t_and_c_m">Terms and Conditions</a> 
+                     By clicking <strong class="label label-primary">Register</strong>, you agree to the <a href="#">Terms and Conditions</a> 
                 </div>
             </div>
             
@@ -172,23 +172,6 @@
         </form>
     </div>
 </div>
-<!-- Modal -->
-<div class="modal fade" id="t_and_c_m" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                <h4 class="modal-title" id="myModalLabel">Terms & Conditions</h4>
-            </div>
-            <div class="modal-body">
-                            <p> *Terms & Conditions*
-                        </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-primary" data-dismiss="modal">I Agree</button>
-            </div>
-        </div><!-- /.modal-content -->
-    </div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
 </div>
         </div>
         <div class="modal-footer">
